# Mybrid

./: README.md
MyTechnician/: README.md  dump_midi.py  parse.py  plot_midi.py  requirements-all.txt  requirements-minimal.txt
MyTechnician/cdefine/: __init__.py
MyTechnician/mytechnician/: __init__.py
RaspberryPiPico/: CMakeLists.txt  My_MIDI_constants.h  README.md  pico-piano.c
data/: plot_midi.py  test_dump_adc.mid
data/RPiPico+CNY70/: parse.py
data/RPiPico+CNY70/hires/: test_b.12bit.1chan.bz2  test_b.8bit.3chan.bz2
data/RPiPico+EAITRCA6/: .flake8  1000us.mid.bz2  100us.mid.bz2  README.md  parse.py  pp-to-ff.mid.bz2
data/RPiPico+EAITRCA6/battery/: battery_a.12bit.1chan.bz2  battery_a.8bit.3chan.bz2  battery_b.12bit.1chan.bz2  battery_b.8bit.3chan.bz2
data/RPiPico+EAITRCA6/hires/: p_to_f.12bit.1chan.bz2  p_to_f.12bit.1chan.stats.txt  p_to_f.8bit.3chan.bz2  p_to_f.8bit.3chan.stats.txt
data/RPiPico+QRE1113/hires/: test_a.12bit.1chan.bz2  test_a.8bit.3chan.bz2
